# mlops

./: .dockerignore  .dvcignore  .env.template  .gitignore  CONTRIBUTING.md  Dockerfile.fastapi  Dockerfile.mlflow  Dockerfile.mlflow2  Dockerfile.streamlit  README.md  ROADMAP.md  app.py  deployment.yaml  docker-compose-mlflow.yml  docker-compose.yml  drift_report.html  dvc.yaml  last_model_path.json  metrics.json  params.yaml  predict.py  prepare.py  pyproject copy.toml  pyproject.toml  requirements.txt  requirements2.txt  setup.py  test_app.py  test_predict.py  test_prepare.py  train.py  ui.py  utils.py
.dvc/: config
.github/: ci.yml
.github/workflows/: cd.md  cd.yml  ci.yml  docker-ci.yml  main.yml
alertmanager/: config.yml
dags/: airflow.txt  airflow_dag.py  data_pipeline_dag.py  etl.md  training_dag.py
data/: .gitignore  current.csv  test.csv.dvc  train.csv.dvc
data/processed/: .gitignore  train_processed.csv
data/raw/: train.csv.dvc
docker/: Dockerfile.fastapi  Dockerfile.mlflow  Dockerfile.streamlit
docs/diagram/: mlops_pipeline_diagram.py
drift_detection/: airflow_dag_alert.py  current.csv  drift_report.py  generate_random_current_data.py  inspect.py  monitoring.txt  report.html
evidentlyai/: drift_report.py  generate_random_current_data.py
infra/terraform/: main.tf  terraform.md
mlruns/0/: meta.yaml
src/: app.py  config.py  data_ingestion.py  data_preprocess.py  data_validation.py  dvc_data_prep.py  evaluate.py  feature_store_load.py  model_evaluation.py  params.yaml  predict.py  prepare.py  preprocess.py  train.py  train2.py  ui.py
(+166 files in other folders)
