[tool.poetry]
name = "mlops"
version = "0.1.0"
description = "MLOps orchestration microservice"
authors = ["Tan Shi Sian <shisian001@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "src" }]  # optional

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = ">=0.116.1,<0.117.0"
scikit-learn = ">=1.7.1,<2.0.0"
mlflow = ">=3.1.4,<4.0.0"
pandas = ">=2.3.1,<3.0.0"
uvicorn = ">=0.35.0,<0.36.0"
streamlit = ">=1.47.1,<2.0.0"
dvc = ">=3.61.0,<4.0.0"
prometheus-fastapi-instrumentator = ">=7.1.0,<8.0.0"
evidently = ">=0.7.11,<0.8.0"
apache-airflow = ">=3.0.3,<4.0.0"
flake8 = "^7.3.0"
python-dotenv = "^1.1.1"
pyspark = "^4.0.0"
psycopg2-binary = "^2.9.10"
boto3 = "^1.40.13"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
mypy = "^1.10"
black = "^24.3"
dvc = "^3.62.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
